--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,12 +17,28 @@ body {
     letter-spacing: 0.025em;
 }
 
+h2 {
+  color: #008800;
+  font-size: 2.0rem;
+  font-weight: 400;
+}
+h2 > span {
+  margin-left: 8px;
+}
+
+hr {
+  margin-bottom: 16px;
+}
+
 select {
   padding: 4px;
 }
 
-input[type='text'] {
+input[type='text'],
+input[type='password'] {
   padding: 4px;
+  border-radius: 5px;
+  border: 1px solid #aaa;
 }
 
 /* ----------------
@@ -42,36 +58,52 @@ Common
   margin-bottom: 16px;
 }
 
+.alertMessage {
+  margin-left: 16px;
+  color: #dd0000;
+}
+
+.inputAlert {
+  background-color: #ffffaa;
+}
+
+
 .btn {
   border: none;
   background: #008800;
   color: #fff;
   cursor: pointer;
-  padding: 2px 8px;
-  margin: 2px 8px;
   border-radius: 5px;
+  padding: 4px 16px;
   font-size: 1.6rem;
   line-height: 1.6;
 }
 .btn:disabled {
-  background-color: #eee;
-  color: #333;
+  background-color: #ddd;
+  color: #aaa;
   cursor: default;
+}
+.btn:disabled:hover {
+  opacity:initial;
 }
 .btn:hover {
   opacity: 0.6;
 }
 .btn.negative {
-  background: #aaa;
+  background: #ddd;
   color: #333;
 }
+.btn.delete {
+  float: right;
+}
 
-.btn-group .btn {
+.btn-group button {
   margin-right: 8px;
 }
-.btn-group .btn:last-child {
+.btn-group button:last-child {
   margin-right: 0;
 }
+
 
 input[type='text'],
 input[type='date'] {
@@ -111,6 +143,9 @@ Common - Layout
   display: none;
 }
 .modal_window {
+  display: table;
+  width: 300px;
+  height: 200px;
   position: absolute;
   top: 25%;
   left: 50%;
@@ -132,27 +167,44 @@ Login
     align-items: center;
 }
 .login-form {
-    width: 400px;
+    width: 500px;
+    padding: 48px;
     background: #fff;
     border: 1px solid #aaa;
+    border-radius: 10px;
 }
 .login-form > h1 {
+    margin-top: 0;
     text-align: center;
 }
 .login-form .errorMessage {
-    height: 32px;
     color: #ff0000;
     text-align: center;
+}
+.login-form > div {
+  width: 80%;
+  margin: 0 auto;
 }
 .login-form .entry {
     margin-bottom: 8px;
 }
 .login-form .input {
-    width: 368px;
-    margin: 0 16px;
+    width:100%;
+}
+.login-form .password {
+  position: relative;
+}
+.login-form .password span {
+  position: absolute;
+  right: 16px;
+  top: 1.2rem;
+  cursor: pointer;
+  font-size: 1.6rem;
+  color: #aaa;
 }
 .login-form input {
     padding: 8px;
+    line-height: 1.6rem;
     outline: none;
 }
 .login-form .button {
@@ -185,13 +237,20 @@ Main
 .main .header {
     position: relative;
     width: 100%;
-    height: 48px;
+    height: 64px;
     background: #008800;
     color: #fff;
     line-height: 48px;
-    padding: 0 8px;
+    padding: 0 24px;
     display: flex;
-    justify-content: space-between;    
+    justify-content: space-between;
+    align-items: center;
+}
+.main .footer {
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  font-size: 1.2rem;
 }
 .main .body {
     width: 100%;
@@ -220,10 +279,12 @@ Main - Menu
 .header .menu-icon:hover {
   opacity: 0.6;
 }
-
+.header .systemName {
+  font-size: 2.0rem;
+}
 .header .menu {
   position: absolute;
-  width: 200px;
+  width: 250px;
   height: 100vh;
   top: 0px;
   left: 0px;
@@ -231,12 +292,12 @@ Main - Menu
   transition: all .3s 0s ease;
 }
 .header .menu.close {
-  left: -220px;
+  left: -270px;
   transition: all .3s 0s ease;
 }
 
 .header .menu > div {
-  width: 200px;
+  width: 250px;
   height: 100vh;
   padding: 0;
   margin: 0;
@@ -247,7 +308,7 @@ Main - Menu
 
 .header .menu .closeButton {
   float: right;
-  color: #333;
+  color: #aaa;
   font-size: 3.0rem;
   cursor: pointer;
   margin-right: 16px;
@@ -264,9 +325,12 @@ Main - Menu
 .header .menu > div > ul li {
     padding-left: 32px;
     list-style-type: none;
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     cursor: pointer;
-    color: #333;
+    color: #008800;
+}
+.header .menu > div > ul li span {
+  margin-left: 8px;
 }
 .header .menu > div > ul li:hover {
     background: #008800;
@@ -290,17 +354,21 @@ Main - ListStyle
 
 .list > table,
 .edit > table {
-  padding: 4px;
   width: 100%;
+  margin-bottom: 16px;
 }
 
 .list > table tr,
 .edit > table tr {
-  height: 36px;
+  height: 48px;
 }
 
 .list > table > thead tr {
   margin-bottom: 20px;
+}
+.list > table > thead th,
+.list > table > tbody td {
+  padding: 0 8px;
 }
 
 .list > table > thead th {
@@ -322,6 +390,9 @@ Main - ListStyle
   border-bottom: 1px dashed #aaa;
 }
 
+.edit > table > tbody th.item {
+  width: 200px;
+}
 
 
 /* ----------------
@@ -428,13 +499,15 @@ Reservations
 }
 .datePicker {
   width: 150px;
-  padding: 4px;
+  margin-right: 16px;
 }
 
 .rsvMessage {
   padding: 8px;
 }
 .rsvModalContent {
+  display: table-cell;
+  vertical-align: middle;
   margin: 0 auto;
   color: #000;
   padding: 32px; 
@@ -450,11 +523,22 @@ Reservations
 .rsvBoxContainer > ul {
   width: 120px;
   border: 1px solid #aaa;
+  border-radius: 5px;;
   padding: 8px;
   margin: 8px 8px 8px 0;
   cursor: pointer;
   list-style: none;
+  font-size: 1.4rem;
+
+  background-color: #ffffaa;
 }
 .rsvBoxContainer > ul:hover {
-  background: #f0fff0;
+  /* background: #f0fff0; */
+  opacity: 0.6;
+}
+.rsvBoxContainer > ul li {
+  margin-bottom: 4px;
+}
+.rsvBoxContainer > ul li:last-child {
+  margin-bottom: 0;
 }
