--- a/src/css/style.css
+++ b/src/css/style.css
@@ -467,7 +467,44 @@ Main - Loading
   }
 }
 
-  
+/* ----------------
+Main - Pagination
+------------------- */
+.pagination {
+  width: 50%;
+  margin: 0 auto;
+  padding-top: 32px;
+  font-size: 2.0rem;
+  text-align: center;
+}
+.pagination .arrow {
+  color: #008800;
+  cursor: pointer;
+}
+.pagination .arrow.disabled {
+  color: #aaa;
+  cursor: initial;
+}
+.pagination .current {
+  color: #008800;
+  font-weight: 600;
+  cursor: initial;
+}
+.pagination ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: inline-block;
+}
+.pagination li {
+  display: inline-block;
+  margin-left: 16px;
+  cursor: pointer;
+}
+.pagination li:last-child {
+  margin-right: 16px;
+}
+
 /* ----------------
 Main - tableData
 ------------------- */
@@ -515,6 +552,10 @@ Reservations
 }
 .rsvModalContent p {
   margin: 0 0 16px 0;
+}
+
+.rsvStartTime {
+  width: 120px;
 }
 
 .rsvBoxContainer {
